# minecord

./: .dockerignore  .gitignore  CONFIGURATION.md  Containerfile  TODO-prompts.md  example.env  minecord.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml  scan-python.yml
dev-tools/: build.sh  test-discord-bot.sh  test-mineserv.sh
minecord/: __init__.py  admins.py  bot.py  config.py
minecord/backend/: rcon.py
minecord/cogs/: __init__.py  admin.py  echo.py  minecraft.py
