[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "minecord"
version = "0.1.0"  # Or your project's version
description = "A Discord bot for managing a Minecraft server."
authors = [{name = "John Casey", email = "casey.john.d@gmail.com"}]  # Update this
dependencies = [
    "discord.py==2.3.2",
    "PyYAML==6.0.1",
    "mcrcon==0.7.0",
    "audioop-lts==0.2.1",
]

[project.scripts]
minecord = "minecord.bot:run_bot"


[tool.pdm]
distribution = true